Fix fork thumbnail overflow

--- a/app/assets/stylesheets/pages/projects.scss
+++ b/app/assets/stylesheets/pages/projects.scss
@@ -313,7 +313,6 @@
 }
 
 .fork-thumbnail {
-  height: 200px;
   width: calc((100% / 2) - #{$gl-padding * 2});
 
   @include media-breakpoint-up(md) {
